# rl

cooperation-collapse/: .coverage  requirements.txt
cooperation-collapse-vastai/: pyproject.toml
cooperation-collapse-vastai/checkpoints/cooperative/: best.pkl
cooperation-collapse-vastai/checkpoints/cooperative_jax/: best.pkl
cooperation-collapse-vastai/configs/experiment/: baseline_coop.yaml
cooperation-collapse-vastai/dashboard/: __init__.py
cooperation-collapse-vastai/scripts/: train_cooperative.py  vastai_setup.sh
cooperation-collapse/checkpoints/cooperative/: best.pkl
cooperation-collapse/configs/: default.yaml
cooperation-collapse/configs/algorithm/: ippo.yaml  mappo.yaml
cooperation-collapse/configs/environment/: cleanup.yaml
cooperation-collapse/configs/experiment/: collapse_experiment.yaml  defector_training.yaml
cooperation-collapse/outputs/plots/cooperative/: cooperative_metrics.json
cooperation-collapse/scripts/: render_video.py  run_experiment.py  train_cooperative.py  train_jax.py
cooperation-collapse/src/: __init__.py
cooperation-collapse/src/algorithms/: __init__.py
cooperation-collapse/src/algorithms/ippo/: __init__.py  buffer.py  future_prediction.py  jax_trainer.py  network.py  social_influence.py  trainer.py
cooperation-collapse/src/algorithms/mappo/: __init__.py
cooperation-collapse/src/environments/: __init__.py  agent_injection.py  cleanup_env.py  cleanup_env_jax.py
cooperation-collapse/src/experiments/: __init__.py  experiment_runner.py
cooperation-collapse/src/metrics/: __init__.py  brittleness_index.py  collective_metrics.py  inequality_metrics.py
cooperation-collapse/src/utils/: __init__.py  logger.py
cooperation-collapse/src/visualization/: __init__.py  training_plots.py
cooperation-collapse/tests/: test_cleanup_env.py
cooperation-collapse/visualization/: __init__.py
outputs/plots/cooperative/: cooperative_metrics.json
