[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cooperation-collapse"
version = "0.1.0"
description = "Research on cooperation collapse dynamics in Sequential Social Dilemmas using Multi-Agent RL"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Research Author"}
]
keywords = ["reinforcement-learning", "multi-agent", "social-dilemmas", "cooperation", "marl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.1.7",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "streamlit>=1.28.0",
    "pyyaml>=6.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "tensorboard>=2.14.0",
    "wandb>=0.15.0",
    "tqdm>=4.65.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.8",
    "gymnasium>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "ruff>=0.0.280",
]

[project.scripts]
train-coop = "scripts.train_cooperative:main"
train-defector = "scripts.train_defector:main"
run-experiment = "scripts.run_experiment:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "visualization*", "dashboard*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=term-missing"
